--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -45,6 +45,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowJs": true,
-    "noImplicitAny": true,
-  }
+    "noImplicitAny": true
+  },
+  "include": ["src/**/*"]
 }
