feat: step2 node-cron setting

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,11 @@ ENCRYPTION_KEY=YOUR_64_CHARACTER_HEX_ENCRYPTION_KEY
 
 # Port for the backend server
 PORT=3001
+
+# Firebase Admin SDK Credentials
+# Obtain these from your Firebase project settings -> Service accounts
+# FIREBASE_PRIVATE_KEY: Ensure to replace actual newlines with '\n' if copying directly from JSON
+FIREBASE_PROJECT_ID=YOUR_FIREBASE_PROJECT_ID
+FIREBASE_PRIVATE_KEY=YOUR_FIREBASE_PRIVATE_KEY
+FIREBASE_CLIENT_EMAIL=YOUR_FIREBASE_CLIENT_EMAIL
+
